@@ -1436,15 +1436,11 @@ HWND win_handle;
 LRESULT CALLBACK window_proc(HWND hwnd, UINT uMsg, WPARAM wParam, LPARAM lParam)
 {
   LRESULT ret = 0;
-  int old_force_unmap;
   switch (uMsg) {
     case WM_HIBERNATE:
       GC_printf("Received WM_HIBERNATE, calling GC_gcollect\n");
       /* Force "unmap as much memory as possible" mode. */
-      old_force_unmap = GC_get_force_unmap_on_gcollect();
-      GC_set_force_unmap_on_gcollect(1);
-      GC_gcollect();
-      GC_set_force_unmap_on_gcollect(old_force_unmap); /* restore mode */
+      GC_gcollect_and_unmap();
       break;
     case WM_CLOSE:
       GC_printf("Received WM_CLOSE, closing window\n");
