@@ -1,5 +1,17 @@
 2009-10-06  Ivan Maidanski <ivmai@mail.ru>
 
+	* alloc.c (GC_try_to_collect_general): New function (move the code
+	from GC_try_to_collect, pass force_unmap argument).
+	* alloc.c (GC_try_to_collect, GC_gcollect): Call
+	GC_try_to_collect_general().
+	* alloc.c (GC_gcollect_and_unmap): New public function.
+	* include/gc.h (GC_gcollect_and_unmap): New function declaration.
+	* tests/test.c (window_proc): Call GC_gcollect_and_unmap() on
+	WM_HIBERNATE event (instead of GC_set_force_unmap_on_gcollect()
+	and GC_gcollect()).
+
+2009-10-06  Ivan Maidanski <ivmai@mail.ru>
+
 	* include/gc.h (GC_allow_register_threads, GC_register_my_thread,
 	GC_unregister_my_thread, GC_malloc_many): Refine the comment.
 	* include/gc.h (GC_malloc_many, GC_NEXT): Declare unconditionally
